Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:44:20: error: no matching function for call to 'Ball::Ball(int&)'
         Ball ball(x) = { rand() % W,  rand() % H,
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:44:20: note: candidates are:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note: Ball::Ball()
 struct Ball
        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note:   candidate expects 0 arguments, 1 provided
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note: constexpr Ball::Ball(const Ball&)
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note:   no known conversion for argument 1 from 'int' to 'const Ball&'
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note: constexpr Ball::Ball(Ball&&)
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:5:8: note:   no known conversion for argument 1 from 'int' to 'Ball&&'
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:44:22: error: expected ',' or ';' before '=' token
         Ball ball(x) = { rand() % W,  rand() % H,
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:52:21: warning: value computed is not used [-Wunused-value]
                   1 + rand() % 9, 1 + rand() % 9,
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:52:37: warning: value computed is not used [-Wunused-value]
                   1 + rand() % 9, 1 + rand() % 9,
                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:53:22: warning: value computed is not used [-Wunused-value]
                   15 + rand() % 35,
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:54:32: warning: right operand of comma operator has no effect [-Wunused-value]
                   TX_LIGHTRED, TX_RED };
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:54:39: error: expected ';' before '}' token
                   TX_LIGHTRED, TX_RED };
                                       ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:54:39: warning: right operand of comma operator has no effect [-Wunused-value]
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: At global scope:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:57:19: error: expected unqualified-id before numeric constant
                   1 + rand() % 9, 1 + rand() % 9,
                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:59:43: error: expected declaration before '}' token
                   TX_LIGHTGREEN, TX_GREEN };
                                           ^
---------------------------------------------------------------------------------------------
[11.06.2021 12:47:44,76 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
